# recall

./: .gitignore  cats.npy  justfile  mise.toml  pyproject.toml
recall/: __main__.py  knowledge.py  main.py  models.py
recall/knowledge/: __init__.py  embedding.py  knowledge.py  types.py
recall/knowledge/vectors/: __init__.py  base.py  chroma.py  dict.py  sqlite.py
recall/ui/: history.py  input.py  interface.py
recall/ui/styles/: chat_history.tcss
