[project]
name = "recall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "ollama>=0.4.7",
    "textual>=2.1.2",
    "typer>=0.15.2",
]

[dependency-groups]
dev = ["ruff>=0.9.10", "textual-dev>=1.7.0"]
